components/dropdown/dropdown.css
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");

body {
  font-family: 'IBM Plex Sans', sans-serif;
  background-color: var(--component-button-bg-black-secondary-hover);
}

/* The wrapper class in only for this html file and not part of dropdown */
.wrappers {
  display: flex;
  flex-direction: row;
}

/* Copy from here  */

/* Input container */
.quill-dropdown-container {
  width: 100%;
  align-items: center;
  font-family: var(--core-fontFamily-ibmPlex-sans);
  overflow: hidden;
  position: relative;
  display: flex;
}

.quill-dropdown-container .select2-selection .select2-selection__rendered {
  font-size: var(--semantic-typography-body-md-regular-default-fontSize) !important;
  line-height: var(--semantic-typography-body-md-regular-default-lineHeight);
  color: var(--component-dropdownItem-icon-selectedWhite) !important;
  width: 100%;
  border: none;
  cursor: pointer;
}

/* Input container for size md */
.quill-dropdown-md .select2-container--default .select2-selection--single {
  padding-inline: var(--component-field-spacing-padding-md);
  height: var(--component-field-height-md) !important;
  background-color: var(--core-color-opacity-black-75);
  border-radius: 8px !important;
  border: none !important;
  display: flex;
  align-items: center;

  &:hover {
    background-color: var(--component-button-bg-black-secondary-hover);
  }
}

/* Input container for size sm */
.quill-dropdown-sm .select2-container--default .select2-selection--single {
  padding-inline: var(--component-field-spacing-padding-md);
  height: var(--component-field-height-sm) !important;
  background-color: var(--core-color-opacity-black-75);
  border-radius: 8px !important;
  border: none !important;
  display: flex;
  align-items: center;

  &:hover {
    background-color: var(--component-button-bg-black-secondary-hover);
  }
}

/* Disable input search for default select dropdown*/
.select2-search {
  display: none !important;
}

/* Enable border when dropdown is focussed */
.select2-container--focus {
  border: var(--component-field-border-width) solid var(--component-dropdownItem-icon-selectedWhite);
  border-radius: var(--core-spacing-400) !important;
}

.quill-dropdown-source {
  width: 100%;
  max-width: 320px;
}

/* Dropdown container > ul */
.select2-dropdown {
  margin-top: var(--core-spacing-200);
  border-radius: var(--semantic-borderRadius-md) !important;
  padding: var(--core-spacing-400);
  border: none !important;
}

/*  Default style for option item > li */
.select2-results__option {
  font-family: var(--core-fontFamily-ibmPlex-sans);
  border-radius: var(--component-dropdownItem-border-radius) !important;
  padding-inline: var(--component-dropdownItem-spacing-padding-md) !important;
  gap: var(--component-dropdownItem-spacing-gap-md);
  background-color: var(--component-dropdownItem-bg-default);
  align-items: center;
  display: flex;
  background: var(--component-dropdownItem-label-color-selected) !important;
  color: var(--component-textIcon-inverse-prominent) !important;
  cursor: pointer;
}

/* Dropdown Option size for sm */
.select2-results__option.select2-results__option--sm {
  min-height: var(--component-dropdownItem-height-item-sm);
}

/* Dropdown Option size for md */
.select2-results__option.select2-results__option--md {
  min-height: var(--component-dropdownItem-height-item-md);
}

/* Hover option */
.select2-results__option--highlighted {
  background-color: var(--component-button-bg-black-secondary-hover) !important;
  color: var(--component-textIcon-inverse-prominent) !important;
}

/* Disabled option */
.select2-results__option--disabled {
  opacity: var(--opacity-disabled);
  color: var(--component-textIcon-inverse-prominent);
}

/* Selected option */
.select2-container--default .select2-results__option--selected {
  background-color: var(--component-dropdownItem-icon-selectedWhite) !important;
  color: var(--component-dropdownItem-label-color-selected) !important;
}

/* arrow icon and animation */
.select2-selection__arrow {
  position: relative !important;
  transition-property: transform;
  transition-timing-function: var(--core-motion-ease-400);
  transition-duration: var(--core-motion-duration-200);
}

.select2-container--open .select2-selection__arrow {
  transform: rotate(180deg);
}

/* Success class for input */
.quill-dropdown-success {
  background-color: var(--component-field-bg-fill-successDefault) !important;
  border-radius: var(--core-spacing-400) !important;
  color: var(--component-textIcon-statusNormal-success);
  &:hover {
    background-color: var(--component-field-bg-fill-successHover) !important;
  }
}

.quill-dropdown-container .select2-container--focus.quill-dropdown-success {
  &:focus,
  &:focus-within {
    border: var(--component-field-border-width) solid var(--semantic-color-green-solid-border-static-high) !important;
    background-color: var(--component-field-bg-fill-successFocus) !important;
    border-radius: var(--core-spacing-400) !important;
  }
}

/* Error class for input */
.quill-dropdown-container .quill-dropdown-error {
  background-color: var(--component-field-bg-fill-failDefault) !important;
  border-radius: var(--core-spacing-400) !important;
  color: var(--component-textIcon-statusNormal-danger);
  &:hover {
    background-color: var(--component-field-bg-fill-failHover) !important;
  }
}

.quill-dropdown-container .select2-container--focus.quill-dropdown-error {
  &:focus,
  &:focus-within {
    border: var(--component-field-border-width) solid var(--semantic-color-red-solid-border-static-high) !important;
    background-color: var(--component-field-bg-fill-failFocus) !important;
    border-radius: var(--core-spacing-400) !important;
  }
}

.select2-results__option.align-center {
  justify-content: center !important;
}

.select2-results__option.align-left {
  justify-content: flex-start !important;
}

.quill-dropdown-container .text-align-start {
  text-align: start;
}

.quill-dropdown-container .text-align-center {
  text-align: center;
}

